--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,11 @@
     <div style="display:block; height:15vh;"></div>
     <p style="display:block;position:absolute;width: 80vw; left:50%;transform:translate(-50%,50%);padding:0px;margin:0px;">I'm passionate about UX/UI design and continue to learn coding languages for website development (HTML, CSS, JavaScript, etc.) Other topics of interest include chemistry, mathematics, product design, and entrepreneurship.</p>
     <footer>
-        <p style="color:white; font-size: 20px; padding-left: 20px; padding-top: 10px;">Reach out if you have any questions or would like to connect.</p>
-        <p><a href="mailto:kierra.wang@me.com" style="color:white; font-size: 20px;padding-left: 20px;">kierra.wang@me.com</a></p>
+      <div style="display:block;position:absolute;top:50%;padding:0px;margin:0px;transform:translate(0%,-50%);">
+        <p style="color:white; font-size: 20px; padding-left: 20px;padding-bottom:10px; padding-top: 10px;">Reach out if you have any questions or would like to connect.</p>
+        <p style="padding-bottom:10px;"><a href="mailto:kierra.wang@me.com" style="color:white; font-size: 20px;padding-left: 20px;">kierra.wang@me.com</a></p>
         <p style="color:white; font-size: 20px; padding-left: 20px; padding-top: 5px">(626) 586 - 5045</p>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
