--- a/education.html
+++ b/education.html
@@ -22,28 +22,28 @@
     </header>
     <h1 style="padding: 0px; position: absolute; top: 10vh; padding-top: 5px; padding-left: 5vh;">EDUCATION</h1>
     <div style="position: absolute; width: 0.5vh; top: 20vh; height: 50%; left: 5vh; background-color: black;">
-      <div style="display:block;position:absolute;top:14.28%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:14.28%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:0%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:0%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2011-2017: Grapeland Elementary School</p>
       </div>
-      <div style="display:block;position:absolute;top:28.56%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:28.56%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:20%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:20%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2017-2018: Day Creek Intermediate School</p>
       </div>
-      <div style="display:block;position:absolute;top:42.84%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:42.84%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:40%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:40%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2018-2019: Davidson Young Scholars</p>
       </div>
-      <div style="display:block;position:absolute;top:57.12%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:57.12%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:60;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:60%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2018-2020: Ad Astra School</p>
       </div>
-      <div style="display:block;position:absolute;top:71.4%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:71.4%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:80%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:80%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2019 -<i>Present</i>: Standford Online High School</p>
       </div>
-      <div style="display:block;position:absolute;top:85.68%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:85.68%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+      <div style="display:block;position:absolute;top:100%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:100%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2020 -<i>Present</i>: Mira Costa High School</p>
       </div>
     </div>
