--- a/education.html
+++ b/education.html
@@ -20,8 +20,10 @@
         </nav>
         </div>
     </header>
-    <h1 style="padding: 0px; position: absolute; top: 10vh; padding-top: 5px; padding-left: 5vh;">EDUCATION</h1>
-    <div style="position: absolute; width: 0.5vh; top: 20vh; height: 50%; left: 5vh; background-color: black;">
+    <div style=>
+      <h1 style="padding: 0px; position: absolute; top: 10vh; padding-top: 5px; padding-left: 5vh;">EDUCATION</h1>
+    </div>
+    <div style="position: absolute; width: 0.5vh; top: 20vh; height: 45%; left: 5vh; background-color: black;">
       <div style="display:block;position:absolute;top:0%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:0%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2011-2017: Grapeland Elementary School</p>
@@ -34,7 +36,7 @@
       <div style="display:block;position:absolute;top:40%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2018-2019: Davidson Young Scholars</p>
       </div>
-      <div style="display:block;position:absolute;top:60;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+      <div style="display:block;position:absolute;top:60%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:60%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
         <p>2018-2020: Ad Astra School</p>
       </div>
