--- a/education.html
+++ b/education.html
@@ -20,7 +20,7 @@
         </nav>
         </div>
     </header>
-    <div style=>
+    <div style="display:block;position:absolute;top:12vh;width:100%;height:7.5vh;">
       <h1 style="padding: 0px; position: absolute; top: 10vh; padding-top: 5px; padding-left: 5vh;">EDUCATION</h1>
     </div>
     <div style="position: absolute; width: 0.5vh; top: 20vh; height: 45%; left: 5vh; background-color: black;">
@@ -30,11 +30,11 @@
       </div>
       <div style="display:block;position:absolute;top:20%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:20%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2017-2018: Day Creek Intermediate School</p>
+        <p>2020 -<i>Present</i>: Mira Costa High School</p>
       </div>
       <div style="display:block;position:absolute;top:40%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:40%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2018-2019: Davidson Young Scholars</p>
+        <p>2019 -<i>Present</i>: Standford Online High School</p>
       </div>
       <div style="display:block;position:absolute;top:60%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:60%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
@@ -42,11 +42,11 @@
       </div>
       <div style="display:block;position:absolute;top:80%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:80%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2019 -<i>Present</i>: Standford Online High School</p>
+        <p>2018-2019: Davidson Young Scholars</p>
       </div>
       <div style="display:block;position:absolute;top:100%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
       <div style="display:block;position:absolute;top:100%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2020 -<i>Present</i>: Mira Costa High School</p>
+        <p>2017-2018: Day Creek Intermediate School</p>
       </div>
     </div>
     <footer>
