--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,25 @@
       <div>
         <nav>
           <div class="numero">
-            <a href="portfolio.html" style="padding-right:20px;">PORTFOLIO</a>
+            <a href="portfolio.html" style="padding-right:20px;text-decoration:none;">PORTFOLIO</a>
             <a href="education.html" style="padding-left:20px;">EDUCATION</a>
           </div>
           <a href="index.html" class="uno">KIERRA WANG</a>
         </nav>
         </div>
     </header>
-
     <div style="display:block; height:15vh;"></div>
-    <p style="display:block;position:absolute;width: 80vw; left:50%;transform:translate(-50%,50%);padding:0px;margin:0px;">I'm passionate about UX/UI design and continue to learn coding languages for website development (HTML, CSS, JavaScript, etc.) Other topics of interest include chemistry, mathematics, product design, and entrepreneurship.</p>
-    <footer>
-        <p style="color:white; font-size: 20px; padding-left: 20px; padding-top: 10px;">Reach out if you have any questions or would like to connect.</p>
-        <p><a href="mailto:kierra.wang@me.com" style="color:white; font-size: 20px;padding-left: 20px;">kierra.wang@me.com</a></p>
-        <p style="color:white; font-size: 20px; padding-left: 20px; padding-top: 5px">(626) 586 - 5045</p>
-    </footer>
+    <div style="display:block;height:85vh;position:relative;width:100%;">
+      <card style="top:5%;left:25%;transform:translate(-50%,0%);">
+
+      </card>
+      <card style="top:5%;left:25%;transform:translate(-50%,0%);">
+
+      </card>
+      <card style="top:5%;left:25%;transform:translate(-50%,0%);">
+
+      </card>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
