--- a/education.html
+++ b/education.html
@@ -14,39 +14,41 @@
         <nav>
           <div class="numero">
             <a href="portfolio.html" style="padding-right:20px;">PORTFOLIO</a>
-            <a href="education.html" style="padding-left:20px;">EDUCATION</a>
+            <a href="education.html" style="padding-left:20px;text-decoration: underline;">EDUCATION</a>
           </div>
           <a href="index.html" class="uno">KIERRA WANG</a>
         </nav>
         </div>
     </header>
-    <div style="display:block;position:absolute;top:12vh;width:100%;height:7.5vh;">
-      <h1 style="padding: 0px; position: absolute; top: 10vh; padding-top: 5px; padding-left: 5vh;">EDUCATION</h1>
+    <div style="display:block;position:absolute;top:12vh;width:100%;height:10vh;left:0px;">
+      <h1 style="padding:0px;margin:0px;display:block;position:absolute;top:50%;left:5vh;transform:translate(0%,-50%);">EDUCATION</h1>
     </div>
-    <div style="position: absolute; width: 0.5vh; top: 20vh; height: 45%; left: 5vh; background-color: black;">
-      <div style="display:block;position:absolute;top:0%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:0%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2011-2017: Grapeland Elementary School</p>
-      </div>
-      <div style="display:block;position:absolute;top:20%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:20%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2020 -<i>Present</i>: Mira Costa High School</p>
-      </div>
-      <div style="display:block;position:absolute;top:40%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:40%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2019 -<i>Present</i>: Standford Online High School</p>
-      </div>
-      <div style="display:block;position:absolute;top:60%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:60%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2018-2020: Ad Astra School</p>
-      </div>
-      <div style="display:block;position:absolute;top:80%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:80%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2018-2019: Davidson Young Scholars</p>
-      </div>
-      <div style="display:block;position:absolute;top:100%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
-      <div style="display:block;position:absolute;top:100%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
-        <p>2017-2018: Day Creek Intermediate School</p>
+    <div style="display:block;position:absolute;width:100%;height:58.5vh;margin:0px;padding:0px;top:22vh;">
+      <div style="position: absolute; width: 0.5vh; top: 45%; height: 85%; left: 5vh; background-color: black;transform:translate(0%,-50%);">
+        <div style="display:block;position:absolute;top:0%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:0%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+          <p>2011-2017 Grapeland Elementary School</p>
+        </div>
+        <div style="display:block;position:absolute;top:20%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:20%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+          <p>2020 -<i>Present</i> Mira Costa High School</p>
+        </div>
+        <div style="display:block;position:absolute;top:40%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:40%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+          <p>2019 -<i>Present</i> Standford Online High School</p>
+        </div>
+        <div style="display:block;position:absolute;top:60%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:60%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+          <p>2018-2020 Ad Astra School</p>
+        </div>
+        <div style="display:block;position:absolute;top:80%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:80%;transform:translate(1.5vw,-50%);left:100%;width:80vw;">
+          <p>2018-2019 Davidson Young Scholars</p>
+        </div>
+        <div style="display:block;position:absolute;top:100%;transform:translate(-50%,-50%);left:50%;background-color:rgb(0,0,0);width:3vh;height:0.5vh;"></div>
+        <div style="display:block;position:absolute;top:100%;transform:translate(1.5vw,-50%);left:100%; width:80vw;">
+          <p>2017-2018 Day Creek Intermediate School</p>
+        </div>
       </div>
     </div>
     <footer>
