--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       <div>
         <nav>
           <div class="numero">
-            <a href="portfolio.html" style="padding-right:20px;text-decoration:none;">PORTFOLIO</a>
+            <a href="portfolio.html" style="padding-right:20px;text-decoration:underline;">PORTFOLIO</a>
             <a href="education.html" style="padding-left:20px;">EDUCATION</a>
           </div>
           <a href="index.html" class="uno">KIERRA WANG</a>
@@ -21,15 +21,39 @@
         </div>
     </header>
     <div style="display:block; height:15vh;"></div>
-    <div style="display:block;height:85vh;position:relative;width:100%;">
-      <card style="top:5%;left:25%;transform:translate(-50%,0%);">
-
+    <div style="display:block;height:85vh;position:relative;width:100%;display:flex;justify-content:space-evenly;flex-wrap:wrap;">
+      <card tabindex="1">
+        <centered>
+          <h1 class="front">Genius Junior Game Show</h1>
+          <div class="back">
+            <h1 style="margin:0px;font-size:50px;">Hello</h1>
+          </div>
+        </centered>
       </card>
-      <card style="top:5%;left:50%;transform:translate(-50%,0%);">
-
+      <card tabindex="1">
+        <centered>
+          <h1 style="margin:0px;font-size:50px;">Product Brainstorms with P&G</h1>
+        </centered>
       </card>
-      <card style="top:5%;left:75%;transform:translate(-50%,0%);">
-
+      <card tabindex="1">
+        <centered>
+          <h1 style="margin:0px;font-size:50px;">Collaboration with Tempest Freerunning Academy</h1>
+        </centered>
+      </card>
+      <card tabindex="1">
+        <centered>
+          <h1 style="margin:0px;font-size:50px;">Collaboration with OROS Apparel</h1>
+        </centered>
+      </card>
+      <card tabindex="1">
+        <centered>
+          <h1 style="margin:0px;font-size:50px;">Class Dojo CONUNDRUMS</h1>
+        </centered>
+      </card>
+      <card tabindex="1">
+        <centered>
+          <h1 style="margin:0px;font-size:50px;">VEX Robotics</h1>
+        </centered>
       </card>
     </div>
     <script src="script.js"></script>
