--- a/portfolio.html
+++ b/portfolio.html
@@ -23,16 +23,14 @@
     <div style="display:block; height:15vh;"></div>
     <div style="display:block;height:85vh;position:relative;width:100%;display:flex;justify-content:space-evenly;flex-wrap:wrap;">
       <card tabindex="1">
-        <centered>
           <h1 class="front">Genius Junior Game Show</h1>
           <div class="back">
             <h1 style="margin:0px;font-size:50px;">Hello</h1>
           </div>
-        </centered>
       </card>
       <card tabindex="1">
         <centered>
-          <h1 style="margin:0px;font-size:50px;">Product Brainstorms with P&G</h1>
+          <h1 class="front">Product Brainstorms with P&G</h1>
         </centered>
       </card>
       <card tabindex="1">
