--- a/portfolio.html
+++ b/portfolio.html
@@ -23,36 +23,105 @@
     <div style="display:block; height:15vh;"></div>
     <div style="display:block;height:85vh;position:relative;width:100%;display:flex;justify-content:space-evenly;flex-wrap:wrap;">
       <card tabindex="1">
-          <h1 class="front">Genius Junior Game Show</h1>
-          <div class="back">
-            <h1 style="margin:0px;font-size:50px;">Hello</h1>
-          </div>
+        <p class="front2">2017-2018</p>
+        <h1 class="front">Genius Junior Game Show</h1>
+        <div class="back">
+          <h1 style="margin:0px;">I was part of the show’s pilot group that helped perfect the scripting and content to be pitched to NBC. Throughout my recurring appearances in pilot episodes, I was able to memorize a random deck of 52 cards in order, navigate around the NYC subway system by memory, solve brain-jumbling visual spatial problems, and more. In 2018, NBC released the first season hosted by Neil Patrick Harris.
+          </h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://www.nbc.com/genius-junior</a>
+        </div>
       </card>
       <card tabindex="1">
-        <centered>
-          <h1 class="front">Product Brainstorms with P&G</h1>
-        </centered>
+        <p class="front2">2018-2020</p>
+        <h1 class="front">Product Brainstorms with P&G</h1>
+        <div class="back">
+          <h1 style="margin:0px;">Procter & Gamble representatives worked with a select group of students from my middle school to brainstorm a new product idea. After many discussions, we decided that dehydrated plants with medicinal properties would be tightly packed into designated areas of rockets and sent to space as a way of providing astronauts with necessary nutrients that are naturally grown.</h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://us.pg.com/</a>
+        </div>
       </card>
       <card tabindex="1">
-        <centered>
-          <h1 style="margin:0px;font-size:50px;">Collaboration with Tempest Freerunning Academy</h1>
-        </centered>
+        <p class="front2">2018-2020</p>
+        <h1 class="front">Collaboration with Tempest Freerunning Academy</h1>
+        <div class="back">
+          <h1 style="margin:0px;">I initiated a collaboration between the Ad Astra School and the nearby Tempest gym. At the time, the school did not have an athletics program. To solve this, I contacted the manager of the South Bay Tempest location and organized a partnership. This included scheduling morning and afternoon SpaceX shuttles to transport students and advertising it to the students. Approximately 60% of the school joined the program in the first year.</h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://www.tempestacademy.com/</a>
+        </div>
       </card>
       <card tabindex="1">
-        <centered>
-          <h1 style="margin:0px;font-size:50px;">Collaboration with OROS Apparel</h1>
-        </centered>
+        <p class="front2">2019-2020</p>
+        <h1 class="front">Collaboration with OROS Apparel</h1>
+        <div class="back">
+          <h1 style="margin:0px;">OROS uses aerogel insulation to create a line of clothing. My partner and I created 3D designs for a variety of products, as well as testing the material to see what configurations would be most effective. By the end of the designing period, one of our blueprints was chosen to move onto the next round in the manufacturing process.</h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://www.orosapparel.com/</a>
+        </div>
       </card>
       <card tabindex="1">
-        <centered>
-          <h1 style="margin:0px;font-size:50px;">Class Dojo CONUNDRUMS</h1>
-        </centered>
+        <p class="front2">2019-2020</p>
+        <h1 class="front">Class Dojo CONUNDRUMS</h1>
+        <div class="back">
+          <h1 style="margin:0px;">Class Dojo has an outreach of over 10 million kids. They took student-written CONUNDRUMS, simplified ethical dilemmas, and published them for kids everywhere in the world to study. One of my own CONUNDRUMS was animated and released in the first season (“The Treasure Conundrum”).</h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://www.youtube.com/watch?v=1f5CiGI6s9g</a>
+        </div>
       </card>
       <card tabindex="1">
-        <centered>
-          <h1 style="margin:0px;font-size:50px;">VEX Robotics</h1>
-        </centered>
+        <p class="front2">2019-2020</p>
+        <h1 class="front">VEX Robotics</h1>
+        <div class="back">
+          <h1 style="margin:0px;">My school’s Robotics program had two teams, with the identifications 92305A and 92305B. During the 2019-2020 school year, we won first place in a regional competition and therefore moved on to the state level. Unfortunately, due to COVID restrictions, in-person competitions were discontinued and competitions were held online through simulations of the robots. </h1>
+          <br>
+          <a href="https://www.nbc.com/genius-junior" style="font-size:15px;">https://www.vexrobotics.com/</a>
+        </div>
       </card>
+    </div>
+    <div style="display:block;height:85vh;position:relative;width:100%;display:flex;justify-content:space-evenly;flex-wrap:wrap;">
+      <card tabindex="1">
+        <p class="front2">Mar 4, 2020</p>
+        <h1 class="front">Presenter at Santa Cruz Works New Tech</h1>
+        <div class="back">
+          <h1 style="margin:0px;">After winning CruzHacks 2020 in February, my team was invited back to present at the Santa Cruz Works New Tech event in front of investors and entrepreneurs. </h1>
+          <br>
+          <a href="https://www.youtube.com/watch?v=5ca7n3adBr4" style="font-size:15px;">https://www.youtube.com/watch?v=5ca7n3adBr4</a>
+        </div>
+      </card>
+      <card tabindex="1">
+        <p class="front2">Jan 17-19, 2020</p>
+        <p class="front2" style="top:27px;left:10px;">1st Place Winner of CruzHacks 2020 Best Tech Cares Project</p>
+        <h1 class="front">Big Ben</h1>
+        <div class="back">
+          <h1 style="margin:0px;">The purpose of Big Ben is to help our future generations develop good financial habits early on so that they can avoid developing bad habits later. Kids enjoy seeing interactive things on a website such as funny videos and challenges, which Big Ben uses to keep users interested. </h1>
+          <br>
+          <a href="https://bigben-finances.github.io/bigben/" style="font-size:15px;">https://bigben-finances.github.io/bigben/</a>
+          <br>
+          <a href="https://www.figma.com/file/XqCIeSeT0z8XSoKhyf7iSA/BigBen-Finances" style="font-size:15px;">https://www.figma.com/BigBen-Finances</a>
+          <br>
+          <a href="https://devpost.com/software/big-ben" style="font-size:15px;">https://devpost.com/software/big-ben</a>
+        </div>
+      </card>
+      <card tabindex="1">
+        <p class="front2">Sep 19-25, 2020</p>
+        <h1 class="front">Storiology</h1>
+        <div class="back">
+          <h1 style="margin:0px;">Kid volunteers read to sick kids in hospitals to promote mental health during these social distancing times. Patients are able to find volunteers that they can talk to and call with. Storiology was made for patients to distract them from their pain and help them grow academically.</h1>
+          <br>
+          <a href="https://storiology.org/" style="font-size:15px;">https://storiology.org/</a>
+          <br>
+          <a href="https://www.figma.com/file/IUPgRW8I0fA8GcgD7l5SOS/Storiology?node-id=0%3A1" style="font-size:15px;">https://www.figma.com/Storiology</a>
+          <br>
+          <a href="https://devpost.com/software/storiology" style="font-size:15px;">https://devpost.com/software/storiology/</a>
+        </div>
+      </card>
+      <footer>
+      <div style="display:block;position:absolute;top:50%;padding:0px;margin:0px;transform:translate(0%,-50%);">
+        <p style="color:white; font-size: 20px; padding-left: 20px;padding-bottom:10px; padding-top: 10px;">Reach out if you have any questions or would like to connect.</p>
+        <p style="padding-bottom:10px;"><a href="mailto:kierra.wang@me.com" style="color:white; font-size: 20px;padding-left: 20px;">kierra.wang@me.com</a></p>
+        <p style="color:white; font-size: 20px; padding-left: 20px; padding-top: 5px">(626) 586 - 5045</p>
+      </div>
+    </footer>
     </div>
     <script src="script.js"></script>
   </body>
