--- a/education1.html
+++ b/education1.html
@@ -20,12 +20,12 @@
         </nav>
         </div>
     </header>
-    <div class="timeline" style="background-color: rgb(245, 245, 245);top:12vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Mira Costa High School (2020-Present)</h1></div>
-    <div class="timeline" style="background-color: rgb(235, 235, 235);top:23.3vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Stanford Online High School (2019-Present)</h1></div>
-    <div class="timeline" style="background-color: rgb(225, 225, 225);top:34.6vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Ad Astra School (2018-2020)</h1></div>
-    <div class="timeline" style="background-color: rgb(215, 215, 215); top:45.9%;><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Davidson Young Scholars (2018-2019)</h1></div>
-    <div class="timeline" style="background-color: rgb(205, 205, 205); top:57.2%;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Day Creek Intermediate School (2017-2018)</h1></div>
-    <div class="timeline" style="background-color: rgb(195, 195, 195); left: 83.3333333333333333333333333333333333333333333334%"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Grapeland Elementary School (2011-2017)</h1></div>  
+    <div class="timeline" style="background-color: rgb(195, 195, 195);top:12vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Mira Costa High School (2020-Present)</h1></div>
+    <div class="timeline" style="background-color: rgb(235, 235, 235);top:23.4vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Stanford Online High School (2019-Present)</h1></div>
+    <div class="timeline" style="background-color: rgb(195, 195, 195);top:34.7vh;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Ad Astra School (2018-2020)</h1></div>
+    <div class="timeline" style="background-color: rgb(235, 235, 235); top:46%;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Davidson Young Scholars (2018-2019)</h1></div>
+    <div class="timeline" style="background-color: rgb(195, 195, 195); top:57.3%;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Day Creek Intermediate School (2017-2018)</h1></div>
+    <div class="timeline" style="background-color: rgb(235, 235, 235); top:68.6%;"><h1 style="color: white; position: absolute; bottom: 0%; margin: 0px; padding: 0px;">Grapeland Elementary School (2011-2017)</h1></div>  
     <footer>
       <div style="display:block;position:absolute;top:50%;padding:0px;margin:0px;transform:translate(0%,-50%);">
         <p style="color:white; font-size: 20px; padding-left: 20px;padding-bottom:10px; padding-top: 10px;">Reach out if you have any questions or would like to connect.</p>
